--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <h1 style="text-align: center;">Thanks for reaching out! I'll try to get back as soon as possible.</h1>
             </div>
             <div class="col">
-                <form style="padding: 30px;">
+                <form style="padding: 30px;" action="https://formsubmit.co/chloe801223@gmail.com" method="POST">
                     <h1 style="padding-top: 4px;">Contact Me</h1>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
