--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Yujin_Day2.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body style="background-color: lightcyan;">  
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -32,7 +33,9 @@
     </nav>
 
     <div class = description>
-        <span style="font-weight: bold;"><h1 style="padding-top: 30px;">Yujin Jung</h1></span> 
+        <div class = gradient-text>
+            <span style="font-weight: bold;"><h1 style="padding: top 30px; padding-bottom: 20px;">Yujin Jung</h1></span> 
+        </div>
         <h2 id="welcome">Hello and welcome to my website!</h2>
         <br>
         <br>
