--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Yujin_Day2.css">
+    <link rel="stylesheet" href="header.css">
     <title>Contact Me</title>
 </head>
 <body style="background-color: lightcyan;">
@@ -39,7 +40,9 @@
             </div>
             <div class="col">
                 <form style="padding: 30px;" action="https://formsubmit.co/chloe801223@gmail.com" method="POST">
-                    <h1 style="padding-top: 4px;">Contact Me</h1>
+                    <div class = gradient-text>
+                        <h1 style="padding-top: 4px;">Contact Me</h1>
+                    </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" name="name" class="form-control" placeholder="Name" />
