--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"><meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Yujin_Day2.css">
+  <link rel="stylesheet" href="header.css">
 </head>
 <body style="background-color: lightcyan;">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -30,7 +31,9 @@
     </div>
   </nav>
   <div class = description>
-    <span style="font-weight: bold;"><h1 style="padding-top: 30px;">My Family</h1></span>
+    <div class = gradient-text>
+      <span style="font-weight: bold;"><h1 style="padding: top 30px; padding-bottom: 20px;">My Family</h1></span>
+    </div>
     <h2 id="welcome">Hello and welcome to my website!</h2>
     <br>
     <br>
