--- a/coding.html
+++ b/coding.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <body style="background-color: lightcyan;">  
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <span style="font-size: 20px;"><a herf="index.html"></span>
-            <a href="index.html" class="navbar-brand">Yujin Jung</a>
+    <div class = gradient-text>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <span style="font-size: 20px;"><a herf="index.html"></span>
+                <a href="index.html" class="navbar-brand">Yujin Jung</a>
+    </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
