--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,10 @@
 <body style="background-color: lightcyan;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a herf="index.html">
+            <span style="font-size: 20px;"><a herf="index.html"></span>
+            <div class = gradient-text>
             <a href="index.html" class="navbar-brand">Yujin Jung</a>
+            </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
