--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
   <link rel="stylesheet" href="header.css">
 </head>
 <body style="background-color: lightcyan;">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <span style="font-size: 20px;"><a herf="index.html"></span>
-      <a href="index.html" class="navbar-brand">Yujin Jung</a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="coding.html">Coding</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <span style="font-size: 20px;"><a herf="index.html"></span>
+        <div class = gradient-text>
+          <a href="index.html" class="navbar-brand">Yujin Jung</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="coding.html">Coding</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   <div class = description>
     <div class = gradient-text>
       <span style="font-weight: bold;"><h1 style="padding: top 30px; padding-bottom: 20px;">My Family</h1></span>
